# microservice

./: .env  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml  vercel.json
CartService/: CMakeLists.txt
CartService/config/: config.json
CartService/controllers/: CartController.cpp
CartService/include/cart/: CartController.hpp  CartRepository.hpp  CartRoutes.hpp  CartService.hpp
CartService/repositories/: CartRepository.cpp
CartService/routes/: CartRoutes.cpp
CartService/services/: CartService.cpp
CartService/src/: main.cpp
InventoryService/: CMakeLists.txt
InventoryService/config/: config.json
InventoryService/controllers/: InventoryController.cpp
InventoryService/include/inventory/: InventoryController.hpp  InventoryRepository.hpp  InventoryRoutes.hpp  InventoryService.hpp
InventoryService/repositories/: InventoryRepository.cpp
InventoryService/routes/: InventoryRoutes.cpp
InventoryService/services/: InventoryService.cpp
InventoryService/src/: main.cpp
PaymentService/: CMakeLists.txt
PaymentService/config/: config.json
PaymentService/controllers/: PaymentController.cpp
PaymentService/include/payment/: PaymentController.hpp  PaymentRepository.hpp  PaymentRoutes.hpp  PaymentService.hpp
PaymentService/repositories/: PaymentRepository.cpp
PaymentService/routes/: PaymentRoutes.cpp
PaymentService/services/: PaymentService.cpp
PaymentService/src/: main.cpp
ProductService/: CMakeLists.txt
ProductService/config/: config.json
ProductService/controllers/: ProductController.cpp
ProductService/include/product/: ProductController.hpp  ProductModels.hpp  ProductRepository.hpp  ProductRoutes.hpp  ProductService.hpp
ProductService/models/: ProductModels.cpp
ProductService/repositories/: ProductRepository.cpp
ProductService/routes/: ProductRoutes.cpp
ProductService/services/: ProductService.cpp
ProductService/src/: main.cpp
Shared/: CMakeLists.txt
Shared/include/shared/: ApiResponse.hpp  Config.hpp  Database.hpp  HttpClient.hpp  Logger.hpp  RequestLoggerMiddleware.hpp
Shared/src/: Config.cpp  Database.cpp  HttpClient.cpp  Logger.cpp
cart-service/: index.php
cart-service/api/: cart.php
cart-service/config/: database.php
catalog-service/: Dockerfile  index.php
catalog-service/api/: categories.php  products.php
catalog-service/config/: database.php
database/: CartDB.sql  InventoryDB.sql  PaymentDB.sql  ProductDB.sql
database/cart/: 01_schema.sql
database/catalog/: 01_schema.sql  02_seed.sql  04_update_images.sql
database/inventory/: 01_schema.sql  02_seed.sql
database/payment/: 01_schema.sql
docs/: API_DOCUMENTATION.md
frontend/: Dockerfile  admin.html  cart.html  checkout.html  index.html  login.html  nginx.conf  product-detail.html  products.html  transactions.html
frontend/css/: style.css
frontend/js/: auth.js  config.js
inventory-service/: Dockerfile  apache.conf  index.php
inventory-service/api/: events.php  stock.php
inventory-service/config/: database.php
payment-service/: Dockerfile  apache.conf  index.php
payment-service/api/: auth.php  payment.php  transactions.php
payment-service/config/: database.php
